@@ -1,3 +1,7 @@
+2010-04-06  Kirit Saelensminde  <kirit@felspar.com>
+ Parsers
+ - Removed the parser instances because they're not thread safe.
+
 2010-04-05  Kirit Saelensminde  <kirit@felspar.com>
  URL
  - The query string can now be any sequence rather than only a map of
